实现UserShell连续读写功能